--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
   </head>
   <body>
-
+<div class="container-fluid">
+<nav class="nav justify-content-center" >
+    <nav class="navbar-brand">Exchange On-Demand</nav>
+  <a class="nav-link" href="#" id="homePage">Home</a>
+  
+  <a class="nav-link" href="#">Pay</a>
+  
+  <a class="nav-link" id="addCard" href="#">Add Cards</a>
+  
+  <a class="nav-link" href="#" id="supportNav" >Support</a>
+</nav>
+  </br>
+  <div id="mainContent" align="center">
+    
+  </div>
+</div>
   </body>
 </html>
