--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <a class="nav-link" href="#">Pay</a>
   
-  <a class="nav-link" id="addCard" href="#">Add Cards</a>
+  <a class="nav-link" id="addCard" href="#">Link Cards</a>
   
   <a class="nav-link" href="#" id="supportNav" >Support</a>
 </nav>
