--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar-brand">Exchange On-Demand</nav>
   <a class="nav-link" href="#" id="homePage">Home</a>
   
-  <a class="nav-link" href="#">Pay</a>
+  <a class="nav-link" href="#" id="payCard>Pay</a>
   
   <a class="nav-link" id="addCard" href="#">Link Cards</a>
   
