--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <nav class="nav justify-content-center" >
     <nav class="navbar-brand">Exchange On-Demand</nav>
   <a class="nav-link" href="#" id="homePage">Home</a>
-  
-  <a class="nav-link" href="#">Pay</a>
-  
+
+  <a class="nav-link" href="#" id="payCard">Pay</a>
+
   <a class="nav-link" id="addCard" href="#">Link Cards</a>
-  
+
   <a class="nav-link" href="#" id="supportNav" >Support</a>
 </nav>
   </br>
   <div id="mainContent" align="center">
-    
+
   </div>
 </div>
   </body>
